--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
