--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.10.0",
     "ky": "^1.8.1",
     "next": "15.3.4",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
